<resources>
    <string name="app_name">Diary</string>

    <!--  content description  -->
    <string name="search_icon">search_icon</string>
    <string name="add_circle_icon">add circle icon</string>
    <string name="add_image_icon">add image icon</string>
    <string name="add_link_icon">add link icon</string>
    <string name="add_notes_button">add notes button</string>
    <string name="back_icon">back icon</string>
    <string name="save_icon">save icon</string>
    <string name="icon_delete">Icon delete</string>

    <!--  MainActivity - EditTexts placeholder && No content illustration message -->
    <string name="search_notes">Search</string>
    <string name="no_content_message">A fresh start</string>
    <string name="no_content_submessage">Anything to add ?</string>

    <!--  AddNoteActivity - EditTexts placeholder && Image cover -->
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="content">Content</string>
    <string name="image_cover">image cover</string>

    <!--  Dialog delete  -->
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete</string>
    <string name="delete_note_subtitle">Are you sure want to delete this story ?</string>

    <!--  Dialog choose image  -->
    <string name="dialog_image_title">Add an image</string>

    <!--  Misc  -->
    <string name="misc">Miscellaneous</string>
    <string name="add_img">Add an image</string>
    <string name="add_link">Add a link</string>
    <string name="make_copy">Make a copy</string>
    <string name="share">Share</string>
    <string name="username_and_email"><![CDATA[Username & Email address]]></string>
</resources>