<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:elevation="5dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/bottom_sheet_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/misc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingHorizontal="@dimen/medium_margin">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ripple_add_note"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/margin"/>
            
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ripple_add_note"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/margin"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ripple_add_note"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/margin"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ripple_add_note"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/margin"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bottomBarSelectableItem">

        <ImageView
            style="@style/selectableItemImage"
            android:src="@drawable/ic_image" />

        <TextView
            style="@style/TextAppearance.AppCompat.Button.selectableItemText"
            android:text="@string/add_img" />
    </LinearLayout>

    <LinearLayout style="@style/bottomBarSelectableItem">

        <ImageView
            style="@style/selectableItemImage"
            android:src="@drawable/ic_web" />

        <TextView
            style="@style/TextAppearance.AppCompat.Button.selectableItemText"
            android:text="@string/add_link" />
    </LinearLayout>

    <LinearLayout style="@style/bottomBarSelectableItem">

        <ImageView
            style="@style/selectableItemImage"
            android:src="@drawable/ic_copy_alt" />

        <TextView
            style="@style/TextAppearance.AppCompat.Button.selectableItemText"
            android:text="@string/make_copy" />
    </LinearLayout>

    <LinearLayout style="@style/bottomBarSelectableItem">

        <ImageView
            style="@style/selectableItemImage"
            android:src="@drawable/ic_share" />

        <TextView
            style="@style/TextAppearance.AppCompat.Button.selectableItemText"
            android:text="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_delete_note"
        style="@style/bottomBarSelectableItem"
        android:visibility="gone">

        <ImageView
            style="@style/selectableItemImage"
            android:contentDescription="@string/icon_delete"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorRed" />

        <TextView
            style="@style/TextAppearance.AppCompat.Button.selectableItemText"
            android:text="@string/delete_note"
            android:textColor="@color/colorRed" />
    </LinearLayout>

</LinearLayout>
