<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_delete_note_container"
    app:cardCornerRadius="@dimen/margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_plantdoodle"
            android:background="#82B1FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/delete_subtitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/delete_note_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_icon" />

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/delete"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_subtitle" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            android:textColor="@color/colorIcon"
            app:layout_constraintBottom_toBottomOf="@id/delete_button"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="@id/delete_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>